fix: very minor Java warnings